# rs485-bridge

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  readme.md
.github/matrices/: cmake-flags.json
.github/workflows/: main.yml
application/inc/: config.h  dim_flags.h  error_base.h  rs485_bridge_flags.h
application/src/: config.c  error.c  main.c
drivers/components/inc/: dip_switch.h  led.h  r4s8cr_driver_flags.h
drivers/components/src/: dip_switch.c  led.c  r4s8cr_hw.c
drivers/device/inc/: stm32g4xx_device_flags.h  stm32l0xx_device_flags.h
drivers/mac/inc/: lmac_driver_flags.h
drivers/mac/src/: lmac_hw.c
drivers/peripherals/inc/: adc.h  gpio_mapping.h  lpuart.h  mcu_mapping.h  nvic_priority.h  nvm_address.h  rcc.h  rtc.h  stm32g4xx_drivers_flags.h  stm32l0xx_drivers_flags.h
drivers/peripherals/src/: adc.c  gpio_mapping.c  lptim.c  mapping.c  mcu_mapping.c  tim.c
drivers/registers/inc/: stm32g4xx_registers_flags.h  stm32l0xx_registers_flags.h
drivers/utils/inc/: embedded_utils_flags.h  terminal_instance.h
drivers/utils/src/: terminal_hw.c
inc/: mode.h
inc/applicative/: at.h  at_usb.h  config.h  dim.h  dinfox.h  error.h  lvrm.h
inc/components/: dinfox.h  power.h  rs485.h  rs485_common.h
inc/nodes/: at_bus.h  dinfox.h  lbus.h  node.h  r4s8cr.h
inc/peripherals/: adc.h  exti.h  flash.h  gpio.h  iwdg.h  lptim.h  lpuart.h  mapping.h  nvic.h  nvm.h  pwr.h  rcc.h  rtc.h  tim.h  usart.h
inc/utils/: math.h  parser.h  string.h
linker/: dim_hw1-0.ld  dim_hw1-1.ld
linker/HW1_0/: gcc_arm.ld
middleware/analog/inc/: analog.h
middleware/analog/src/: analog.c
middleware/cli/inc/: cli.h
middleware/cli/src/: at_usb.c  cli.c
middleware/lbus/inc/: node.h  r4s8cr.h
middleware/lbus/src/: at_bus.c  lbus.c  node.c
middleware/node/inc/: node.h  una_at_flags.h  una_lib_flags.h  una_r4s8cr_flags.h
middleware/node/src/: node.c  una_at_hw.c
middleware/power/inc/: power.h
middleware/power/src/: power.c
script/: DIM_HW1-0_Debug.launch  DIM_HW1-0_Run.launch  DIM_HW1-1_Debug.launch  DIM_HW1-1_Run.launch  HW1_0.jlink  HW1_1.jlink  dim _hw1-0_debug.launch  dim_hw1-0.jlink  dim_hw1-0_debug.launch  dim_hw1-0_run.launch  dim_hw1-1.jlink  dim_hw1-1_debug.launch  dim_hw1-1_run.launch  git_version.sh  rs485_bridge_hw1-0.jlink  rs485_bridge_hw1-0_debug.launch  rs485_bridge_hw1-0_run.launch
src/: main.c
src/applicative/: at.c  at_usb.c  config.c  error.c
src/components/: power.c  rs485.c
src/nodes/: at_bus.c  lbus.c  node.c  r4s8cr.c
src/peripherals/: adc.c  exti.c  fault.c  flash.c  gpio.c  iwdg.c  lptim.c  lpuart.c  mapping.c  nvic.c  nvm.c  pwr.c  rcc.c  rtc.c  usart.c
src/utils/: math.c  parser.c  string.c
startup/: dim_startup.c  startup_ARMCM0plus.c
